--- a/Red_Bus_Bus_data_Extraction.ipynb
+++ b/Red_Bus_Bus_data_Extraction.ipynb
@@ -27,7 +27,7 @@
     "connection = mysql.connector.connect(\n",
     "    host = \"localhost\",\n",
     "    user = \"root\",\n",
-    "    password = \"Aftab1234\",\n",
+    "    password = \"12345678\",\n",
     "    database = \"project1\"\n",
     ")\n",
     "cursor = connection.cursor()"
