--- a/Red_Bus_Bus_data_Extraction.ipynb
+++ b/Red_Bus_Bus_data_Extraction.ipynb
@@ -208,7 +208,7 @@
    "outputs": [],
    "source": [
     "#creating connection with db\n",
-    "engine = create_engine('mysql+pymysql://root:Aftab1234@localhost:3306/project1',pool_pre_ping=True)"
+    "engine = create_engine('mysql+pymysql://root:123456@localhost:3306/project1',pool_pre_ping=True)"
    ]
   },
   {
